# learn_python_using_examples

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml
.github/workflows/: ci.yml
docs/: README.md  index.md  mkdocs.yml  roadmap.md
scripts/: bootstrap.sh  ci_local.sh  new_module.py  run_all.sh
src/learn/oops_concept/: inheritance.py  python_oops_concepts.md
src/lpe/modules/00_basics/: README.md
src/lpe/modules/01_oop_foundations/: README.md
src/lpe/modules/02_solid/: README.md
src/lpe/modules/03_testing/: README.md
src/lpe/modules/04_pydantic_models/: README.md
src/lpe/modules/05_design_patterns/: README.md
src/lpe/modules/06_asyncio_concurrency/: README.md
src/lpe/modules/07_api_clients_resilience/: README.md
src/lpe/modules/08_fastapi_service/: README.md
src/lpe/modules/09_data_ingestion_pipeline/: README.md
src/lpe/modules/10_storage_caching/: README.md
src/lpe/modules/11_observability/: README.md
src/lpe/modules/12_clean_architecture/: README.md
tests/: README.md  test_smoke_imports.py
tests/learn/: test_inheritance.py
tests/scripts/: test_new_module.py
