[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "learn-python-examples"
version = "0.1.0"
description = "Production-grade Python learning repo: OOP, SOLID, patterns, async, testing, pydantic."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Vidyadhar Bendre" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "structlog>=24.1",
  "httpx>=0.27",
  "tenacity>=8.2",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "coverage[toml]>=7.5",
  "mypy>=1.10",
  "ruff>=0.6",
  "pre-commit>=3.7",
  "types-requests",
]
fastapi = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lpe"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/lpe"]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 70