[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "learn-python-examples"
version = "0.1.0"
description = "Production-grade Python learning repo: OOP, SOLID, patterns, async, testing, pydantic."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Vidyadhar Bendre" }]
dependencies = [
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "structlog>=24.1",
  "httpx>=0.27",
  "tenacity>=8.2",
  "typer>=0.12",
  "rich>=13.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "coverage[toml]>=7.5",
  "mypy>=1.10",
  "ruff>=0.6",
  "pre-commit>=3.7",
  "types-requests",
  "respx>=0.21",
]
fastapi = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
]

[tool.hatch.build.targets.wheel]
packages = ["src/lpe"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
branch = true
source = ["src/lpe"]

[tool.coverage.report]
skip_covered = true
show_missing = true
fail_under = 70

[tool.ruff]
line-length = 100
target-version = "py311"
fix = true
select = ["E", "F", "I", "B", "UP", "SIM", "PL", "RUF"]
ignore = ["PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["PLR2004"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_any_generics = true
